--- a/maven.apisupport/src/org/netbeans/modules/maven/apisupport/NbmWizardPanelVisual.form
+++ b/maven.apisupport/src/org/netbeans/modules/maven/apisupport/NbmWizardPanelVisual.form
@@ -99,6 +99,7 @@
     </Component>
     <Component class="javax.swing.JCheckBox" name="cbOsgiDeps">
       <Properties>
+        <Property name="selected" type="boolean" value="true"/>
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
           <ResourceString bundle="org/netbeans/modules/maven/apisupport/Bundle.properties" key="NbmWizardPanelVisual.cbOsgiDeps.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
         </Property>
