#258345 - 'vendor' directory always ignored
Composer part.

--- a/php.composer/src/org/netbeans/modules/php/composer/ui/options/ComposerOptionsPanel.form
+++ b/php.composer/src/org/netbeans/modules/php/composer/ui/options/ComposerOptionsPanel.form
@@ -16,46 +16,47 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" attributes="0">
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="noteLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="errorLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="installationInstructionsLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="learnMoreLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                      </Group>
+          <Group type="103" groupAlignment="0" attributes="0">
+              <Component id="noteLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+              <Component id="errorLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+              <Group type="102" alignment="0" attributes="0">
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Component id="installationInstructionsLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                      <Component id="learnMoreLabel" alignment="0" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="composerLabel" min="-2" max="-2" attributes="0"/>
-                          <Component id="authorNameLabel" min="-2" max="-2" attributes="0"/>
-                          <Component id="authorEmailLabel" min="-2" max="-2" attributes="0"/>
-                          <Component id="vendorLabel" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <Group type="102" alignment="0" attributes="0">
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Component id="composerLabel" min="-2" max="-2" attributes="0"/>
+                      <Component id="authorNameLabel" min="-2" max="-2" attributes="0"/>
+                      <Component id="authorEmailLabel" min="-2" max="-2" attributes="0"/>
+                      <Component id="vendorLabel" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Group type="102" attributes="0">
+                          <Component id="hintLabel" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                       </Group>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" attributes="0">
-                              <Component id="hintLabel" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                      <Group type="102" alignment="1" attributes="0">
+                          <Group type="103" groupAlignment="1" attributes="0">
+                              <Component id="vendorTextField" alignment="0" max="32767" attributes="0"/>
+                              <Component id="authorEmailTextField" alignment="0" pref="145" max="32767" attributes="0"/>
+                              <Component id="composerTextField" alignment="0" max="32767" attributes="0"/>
+                              <Component id="authorNameTextField" alignment="0" max="32767" attributes="0"/>
                           </Group>
-                          <Group type="102" alignment="1" attributes="0">
-                              <Group type="103" groupAlignment="1" attributes="0">
-                                  <Component id="vendorTextField" alignment="0" max="32767" attributes="0"/>
-                                  <Component id="authorEmailTextField" alignment="0" pref="145" max="32767" attributes="0"/>
-                                  <Component id="composerTextField" alignment="0" max="32767" attributes="0"/>
-                                  <Component id="authorNameTextField" alignment="0" max="32767" attributes="0"/>
-                              </Group>
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Component id="browseButton" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace min="-2" max="-2" attributes="0"/>
-                              <Component id="searchButton" min="-2" max="-2" attributes="0"/>
-                          </Group>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="browseButton" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" max="-2" attributes="0"/>
+                          <Component id="searchButton" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
-              <EmptySpace min="-2" pref="0" max="-2" attributes="0"/>
+          </Group>
+          <Group type="102" attributes="0">
+              <Component id="ignoreVendorCheckBox" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -85,6 +86,8 @@
                   <Component id="authorEmailTextField" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="authorEmailLabel" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <Component id="ignoreVendorCheckBox" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="noteLabel" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" max="-2" attributes="0"/>
@@ -158,6 +161,13 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="authorEmailTextField">
+    </Component>
+    <Component class="javax.swing.JCheckBox" name="ignoreVendorCheckBox">
+      <Properties>
+        <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
+          <ResourceString bundle="org/netbeans/modules/php/composer/ui/options/Bundle.properties" key="ComposerOptionsPanel.ignoreVendorCheckBox.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
+        </Property>
+      </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="noteLabel">
       <Properties>
