--- a/javascript.bower/src/org/netbeans/modules/javascript/bower/ui/options/BowerOptionsPanel.form
+++ b/javascript.bower/src/org/netbeans/modules/javascript/bower/ui/options/BowerOptionsPanel.form
@@ -34,10 +34,8 @@
                   </Group>
               </Group>
           </Group>
-          <Group type="102" attributes="0">
-              <Component id="errorLabel" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-          </Group>
+          <Component id="errorLabel" min="-2" max="-2" attributes="0"/>
+          <Component id="ignoreBowerComponentsCheckBox" alignment="0" min="-2" max="-2" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
@@ -54,6 +52,8 @@
                   <Component id="bowerHintLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="installLabel" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="ignoreBowerComponentsCheckBox" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
               <Component id="errorLabel" min="-2" max="-2" attributes="0"/>
           </Group>
@@ -108,6 +108,13 @@
         <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="installLabelMousePressed"/>
         <EventHandler event="mouseEntered" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="installLabelMouseEntered"/>
       </Events>
+    </Component>
+    <Component class="javax.swing.JCheckBox" name="ignoreBowerComponentsCheckBox">
+      <Properties>
+        <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
+          <ResourceString bundle="org/netbeans/modules/javascript/bower/ui/options/Bundle.properties" key="BowerOptionsPanel.ignoreBowerComponentsCheckBox.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
+        </Property>
+      </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="errorLabel">
       <Properties>
